--- a/interpreter/interpreter.vcxproj.filters
+++ b/interpreter/interpreter.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="lex.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ast.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
